# noise-suppression

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
noise-suppression-common/: Cargo.toml
noise-suppression-common/src/: lib.rs
noise-suppression-ladspa/: Cargo.toml
noise-suppression-ladspa/src/: lib.rs
noise-suppression-lv2/: Cargo.toml
noise-suppression-lv2/resources/noise_suppression.lv2/: manifest.ttl  noise_suppression.ttl
noise-suppression-lv2/src/: lib.rs
noise-suppression-mono-vst2/: Cargo.toml
noise-suppression-mono-vst2/src/: lib.rs
noise-suppression-stereo-vst2/: Cargo.toml
noise-suppression-stereo-vst2/src/: lib.rs
