[workspace]
members = [
    "noise-suppression-common",
    "noise-suppression-ladspa",
    "noise-suppression-lv2",
    "noise-suppression-mono-vst2",
    "noise-suppression-stereo-vst2"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
